Refactored mapping Course to ResponseGetCourses